# pointcloud_processing

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: ObjectRecognition.action
config/: rviz_pointcloud.rviz
launch/: highres_gmapping.launch  pointcloud_processing.launch  rviz.launch  sim_core.launch
scripts/: bboxtest.py
src/: common.h  main.cc
src/processing/: accumulate.cc  accumulatehighres.cc  accumulatelowres.cc  cloudfrombbox.cc  extractimage.cc  filteroverlap.cc  isolatesurface.cc  onpointcloud.cc  processing.cc  processing.h  processing.ih  publishstatecloud.cc  removesurface.cc  voxelfilter.cc
src/utility/: getparam.f  nextcolor.cc  output.cc  utility.h  utility.ih
worlds/: explore_world.world
